# lkcpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: test.cpp
src/lkcpp/: algorithm.hpp  array.hpp  assert.hpp  def.hpp  dynamic_array.hpp  except.hpp  memory.hpp  object.hpp  optional.hpp  pod.cpp  pod.hpp  pod_view.cpp  pod_view.hpp  string.hpp  tuple.hpp  type_traits.hpp  unique_ptr.hpp  utility.hpp  vector.hpp
src/lkcpp/algorithm/: equal.hpp
src/lkcpp/except/: failed_allocation.cpp  failed_allocation.hpp  out_of_bounds.cpp  out_of_bounds.hpp
src/lkcpp/memory/: alloc.cpp  alloc.hpp  memcmp.cpp  memcmp.hpp  memcpy.cpp  memcpy.hpp  memfill.cpp  memfill.hpp  memshift.cpp  memshift.hpp  shared_ptr.hpp  smart_pointer.hpp  unique_ptr.hpp  weak_ptr.hpp
src/lkcpp/type_traits/: array_depth.hpp  enable_if.hpp  integral_constant.hpp  is_arithmetic.hpp  is_array.hpp  is_class.hpp  is_compound.hpp  is_const.hpp  is_constructible.hpp  is_enum.hpp  is_floating_point.hpp  is_function.hpp  is_fundamental.hpp  is_integral.hpp  is_lvalue_reference.hpp  is_member_function_pointer.hpp  is_member_object_pointer.hpp  is_member_pointer.hpp  is_null_pointer.hpp  is_object.hpp  is_pointer.hpp  is_reference.hpp  is_rvalue_reference.hpp  is_same.hpp  is_scalar.hpp  is_trivially_copyable.hpp  is_union.hpp  is_void.hpp  is_volatile.hpp  pointer_depth.hpp  remove_cv.hpp
src/lkcpp/utility/: move.hpp  pair.hpp  remove_reference.hpp  swap.hpp
test/: test_array.cpp  test_dynamic_array.cpp  test_memory.cpp  test_object.cpp  test_pod.cpp  test_pod_view.cpp  test_tuple.cpp  test_type_traits.cpp  test_unique_ptr.cpp  test_vector.cpp
test/memory/: test_alloc.cpp  test_memcmp.cpp  test_memcpy.cpp  test_memfill.cpp  test_memshift.cpp  test_unique_ptr.cpp  test_weak_ptr.cpp
test/util/: big_object.hpp  instance_counter.cpp  instance_counter.hpp
test/utility/: test_pair.cpp
